# ROBO_5302_FinalProject

./: SteeringNotes.txt  frames_2025-04-30_11.33.24.gv  frames_2025-04-30_11.33.56.gv  frames_2025-04-30_11.37.23.gv  frames_2025-05-03_14.32.28.gv  frames_2025-05-05_11.36.51.gv  frames_2025-05-05_19.19.53.gv  full_map_output.txt  map_1746416880.pgm  map_1746416880.yaml  motortest.py  my_map.yaml
install/: local_setup.sh  setup.sh
launch/: launch.py  launch.tape.py  (+2 more)
src/robot_car/: CMakeLists.txt
src/robot_car/behavior_trees/: navigate_w_replanning_and_recovery.xml
src/robot_car/config/: mapper_params_offline.yaml  mapper_params_online_async.yaml  nav2_params.yaml  nav2_params_scott.yaml  trent_nav_params.yaml
src/robot_car/install/: local_setup.sh  setup.ps1  setup.sh
src/robot_car/install/robot_car/lib/robot_car/: map_metadata_relay.py
src/robot_car/install/robot_car/share/robot_car/: package.bash  package.ps1  package.sh
src/robot_car/install/robot_car/share/robot_car/config/: localization_params.yaml  nav2_params.yaml
src/robot_car/install/robot_car/share/robot_car/launch/: display.launch.py  localization.launch.py  map_server_test.py  test_localization_launch.py
src/robot_car/launch/: display.launch.py  james_launch.py  loc_launch.py  minimal_launch.py  scott_localization_launch.py  test_localization_launch.py
src/robot_car/log/: latest_build
src/robot_car/maps/: my_map.pgm  my_map.yaml
src/robot_car/robot_car/: bicycle_model_fake_odom_publisher.py  bicycle_model_scott.py
src/robot_car/src/description/: robot_car_description.urdf
(+193 files in other folders)
